--- a/src/resources/static/html/index.html
+++ b/src/resources/static/html/index.html
@@ -7,6 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="board"></div>
+  <div class="main_wrap">
+    <div class="game__wrap">
+      <div class="board"></div>
+    </div>
+  </div>
 </body>
 </html>
